central limit theorem

--- a/random_variables/distributions_pyro.ipynb
+++ b/random_variables/distributions_pyro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "ee5778b3-ff8e-4cbf-a0cd-6c2f9d8811a6",
    "metadata": {},
    "outputs": [],
@@ -15,10 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "2e338381-f7ff-4b3d-869d-cf4164ec4604",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/warrior/miniconda3/envs/inference/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import pyro\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "50f667d1-0c0c-4338-ade4-78d0ced18b15",
    "metadata": {},
    "outputs": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "197b5d48-ec60-4aad-856f-42f3c11904dc",
    "metadata": {},
    "outputs": [
@@ -57,7 +66,7 @@
        "tensor(1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "6811c612-77ff-4f3c-b4bb-9dad9924ac61",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(9.), tensor(1.), tensor(7.3949))"
+       "(tensor(7.), tensor(0.), tensor(7.8363))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
