--- a/random_variables/dist_pgmpy.ipynb
+++ b/random_variables/dist_pgmpy.ipynb
@@ -345,10 +345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "a1973f35-7495-46b8-b7fb-cd2639edead3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/warrior/miniconda3/envs/inference/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from pgmpy.factors.discrete.CPD import TabularCPD\n",
     "from pgmpy.models import BayesianNetwork\n",
@@ -360,16 +369,17 @@
    "id": "4ef553cb-b162-4bcb-a4d2-8725e0125668",
    "metadata": {},
    "source": [
+    "### Sampling model\n",
     "<center>$z \\sim p(Z)$<center>\n",
     "\n",
-    "<center>$x \\sim P(Y|Z=z)$<center>\n",
+    "<center>$x \\sim P(X|Z=z)$<center>\n",
     "\n",
     "<center>$y \\sim P(Y|X=x)$<center>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "2a2c2862-23bd-4ad0-86ed-5ad59bd1f3b4",
    "metadata": {},
    "outputs": [],
@@ -384,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "c2ca7a45-1438-477d-8fb8-cf7aff1851c2",
    "metadata": {},
    "outputs": [],
@@ -403,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "040351d4-df96-4055-8cae-8f8ffc5656b9",
    "metadata": {},
    "outputs": [],
@@ -424,18 +434,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "bd33478c-8d96-4f27-8989-8a82e0c22275",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = BayesianNetwork([('Z','X'),('X','Y')]) # Graph: Z->X->Y\n",
-    "model.add_cpds(pZ, pXgZ, pYgX) # Conditional Probability DIstributions in the model"
+    "model.add_cpds(pZ, pXgZ, pYgX) # Conditional Probability Distributions in the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "e7e8e6a4-420d-4226-b2f5-ed0a32414586",
    "metadata": {},
    "outputs": [
@@ -443,7 +453,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating for node: Y: 100%|██████████| 3/3 [00:00<00:00, 902.13it/s]\n"
+      "Generating for node: Y: 100%|██████████| 3/3 [00:00<00:00, 824.95it/s]\n"
      ]
     },
     {
@@ -477,17 +487,17 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -509,14 +519,14 @@
       ],
       "text/plain": [
        "   Z  X  Y\n",
-       "0  0  0  1\n",
-       "1  0  0  3\n",
-       "2  1  1  1\n",
+       "0  0  0  3\n",
+       "1  1  0  3\n",
+       "2  0  1  1\n",
        "3  0  0  3\n",
        "4  0  1  1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "4b7dd595-f491-437a-ad3b-02f0041218bb",
    "metadata": {},
    "outputs": [
@@ -536,7 +546,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating for node: Y: 100%|██████████| 3/3 [00:00<00:00, 884.87it/s]\n"
+      "Generating for node: Y: 100%|██████████| 3/3 [00:00<00:00, 780.38it/s]\n"
      ]
     },
     {
@@ -574,27 +584,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -603,13 +613,13 @@
       "text/plain": [
        "   Z  X  Y\n",
        "0  0  0  3\n",
-       "1  0  0  3\n",
-       "2  0  1  2\n",
-       "3  1  1  1\n",
-       "4  0  0  3"
+       "1  1  0  3\n",
+       "2  0  0  3\n",
+       "3  1  0  3\n",
+       "4  1  0  2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
