--- a/random_variables/dist_pyro.ipynb
+++ b/random_variables/dist_pyro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee5778b3-ff8e-4cbf-a0cd-6c2f9d8811a6",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2e338381-f7ff-4b3d-869d-cf4164ec4604",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "50f667d1-0c0c-4338-ade4-78d0ced18b15",
    "metadata": {},
    "outputs": [
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "197b5d48-ec60-4aad-856f-42f3c11904dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1)"
+       "tensor(0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6811c612-77ff-4f3c-b4bb-9dad9924ac61",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(7.), tensor(0.), tensor(7.8363))"
+       "(tensor(6.), tensor(0.), tensor(7.4262))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,9 +113,10 @@
    "id": "7c4d7c7c-af00-4539-8bda-d7e6814bc6c6",
    "metadata": {},
    "source": [
+    "### Model\n",
     "<center>$z \\sim p(Z)$<center>\n",
     "\n",
-    "<center>$x \\sim P(Y|Z=z)$<center>\n",
+    "<center>$x \\sim P(X|Z=z)$<center>\n",
     "\n",
     "<center>$y_i \\sim P(Y|X=x)$<center>\n",
     "    \n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "ee1109fa-fc94-44ec-9a46-610816bb2bd1",
    "metadata": {},
    "outputs": [
@@ -133,22 +134,18 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "tensor(8.9286) tensor(6.) tensor(0.)\n",
       "1\n",
+      "tensor(8.9286) tensor(6.) tensor(0.)\n",
       "2\n",
+      "tensor(8.9286) tensor(6.) tensor(0.)\n",
       "3\n",
+      "tensor(8.9286) tensor(6.) tensor(1.)\n",
       "4\n",
-      "5\n"
+      "tensor(8.9286) tensor(6.) tensor(1.)\n",
+      "5\n",
+      "tensor(8.9286) tensor(6.) tensor(2.)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(6.), tensor(0.), tensor(8.0881))"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -158,8 +155,7 @@
     "for i in range(int(x)):\n",
     "    print(i)\n",
     "    y += Bernoulli(.5).sample()\n",
-    "\n",
-    "x,y,z"
+    "    print(z,x,y)"
    ]
   },
   {
@@ -172,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "a86098cd-3f97-4f3d-b43e-e8608ad7183d",
    "metadata": {},
    "outputs": [],
@@ -189,24 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "a1973f35-7495-46b8-b7fb-cd2639edead3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 3.,  3.,  4.,  0.,  3.,  4.,  2.,  3.,  2.,  5.,  2.,  2.,  2.,  1.,\n",
-       "         2.,  1.,  8.,  7.,  2.,  8.,  0.,  0.,  3.,  1.,  3.,  1.,  4.,  6.,\n",
-       "         3., 11.,  4.,  3., 10.,  1.,  2.,  8.,  0.,  1.,  4.,  1.,  3.,  2.,\n",
-       "         3.,  2.,  7.,  6.,  5.,  2.,  1.,  3., 10.,  1.,  8.,  5.,  3.,  4.,\n",
-       "         3.,  3.,  5.,  4.,  3.,  3.,  5.,  3.,  1.,  2.,  3.,  3.,  4.,  1.,\n",
-       "         1.,  7.,  4.,  4.,  5.,  2.,  3.,  2.,  0.,  7.,  3.,  0.,  2.,  6.,\n",
-       "         2.,  5.,  3.,  6.,  2.,  2.,  0.,  5.,  8.,  3.,  5.,  3.,  3.,  1.,\n",
-       "         6.,  1.])"
+       "tensor([3., 5., 3., 5., 2., 8., 4., 0., 2., 5., 1., 2., 2., 5., 2., 3., 0., 4.,\n",
+       "        2., 2., 4., 6., 5., 1., 2., 4., 3., 2., 4., 7., 4., 5., 3., 2., 8., 2.,\n",
+       "        5., 2., 4., 2., 1., 6., 4., 2., 3., 3., 4., 2., 1., 3., 3., 4., 2., 5.,\n",
+       "        0., 4., 3., 3., 3., 1., 8., 2., 5., 5., 6., 1., 4., 1., 3., 3., 2., 4.,\n",
+       "        4., 3., 2., 6., 3., 4., 2., 1., 2., 2., 4., 4., 2., 1., 1., 6., 6., 3.,\n",
+       "        3., 5., 3., 4., 1., 4., 4., 1., 2., 4.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,17 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "18a61e7f-ea0f-4604-9285-2b900c9e14dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(17.1300)"
+       "tensor(13.4700)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
